Refactor: Rename aot_algo to aos, add dependencies and improve build system
- Renamed project from `aot_algo` to `aos` in CMakeLists.txt and examples.
- Added `cryptobot`, `gtest`, and `benchmark` as dependencies via FetchContent.
- Configured hiding of third-party libraries in CMake.
- Removed `histogram_calculator`, `i_histogram_calculator`, and `mutual_information` components.
- Improved test build configuration with `BUILD_TESTS_AOS` option.
- Optimized compiler flags in `examples/CMakeLists.txt`.
- Updated `main.cpp` with new tracking and mutual information classes.
- Deleted `src/empty.cpp` as unnecessary.

add base files

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -5,6 +5,7 @@ project(${PROJECT_NAME})
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pg")
 SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -pg")
 SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -pg")
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O2")
 
 file(GLOB SRC
      "*.cpp"
@@ -16,7 +17,8 @@ add_executable (${PROJECT_NAME}
 )
 
 target_link_libraries(${PROJECT_NAME}
-aot_algo
+aos
+aot
 magic_enum::magic_enum
 tomlplusplus::tomlplusplus
 )
