--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,26 +1,3 @@
-
-set (PROJECT_NAME example1)
-project(${PROJECT_NAME})
-
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pg")
-SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -pg")
-SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -pg")
-set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O2")
-
-file(GLOB SRC
-     "*.cpp"
-)
-
-
-add_executable (${PROJECT_NAME}
-    ${SRC}
-)
-
-target_link_libraries(${PROJECT_NAME}
-aos
-aot
-magic_enum::magic_enum
-tomlplusplus::tomlplusplus
-)
-
-set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 23)
+add_subdirectory(example3)
+add_subdirectory(example2)
+add_subdirectory(example4)
