--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -2,3 +2,8 @@ add_subdirectory(example3)
 add_subdirectory(example2)
 add_subdirectory(example4)
 add_subdirectory(example5)
+add_subdirectory(example6)
+add_subdirectory(example7)
+add_subdirectory(example8)
+add_subdirectory(example9)
+add_subdirectory(example10)
