--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -7,3 +7,4 @@ add_subdirectory(example7)
 add_subdirectory(example8)
 add_subdirectory(example9)
 add_subdirectory(example10)
+add_subdirectory(example11)
