feat(position): Refactor position management and add hedging support
- Renamed `Position` to `NetPosition` and introduced `HedgePosition` for hedging strategies
- Added PnL tracking integration with position operations
- Implemented new position storage system with exchange and trading pair support
- Updated position strategies to handle both net and hedge positions
- Added comprehensive logging for position operations
- Extended examples to demonstrate new functionality
- Added unit tests for net and hedge position strategies
- Improved memory management with custom allocators

--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -20,3 +20,5 @@ cxx_executable_extended(${name} ${dir}/${name}.cc ${libs}  ${ARGN})
 endmacro()
 
 cxx_executable(executor_provider ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main )
+cxx_executable(hedge_position_strategy ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main magic_enum)
+cxx_executable(net_position_strategy ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main magic_enum)
