--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -8,3 +8,5 @@ add_subdirectory(example8)
 add_subdirectory(example9)
 add_subdirectory(example10)
 add_subdirectory(example11)
+add_subdirectory(example12)
+add_subdirectory(example13)
