Add unrealized PnL tracking and improve hash functions
- Implemented unrealized PnL storage and calculator components
- Integrated unrealized PnL updates into position strategies (both net and hedged)
- Improved hash functions using boost::hash_combine for better distribution
- Added new example directories (14, 15) in CMakeLists
- Added comprehensive unit tests for unrealized PnL calculations
- Fixed header guards and commented code in position storage interfaces
- Updated all examples to include unrealized PnL components

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -10,3 +10,5 @@ add_subdirectory(example10)
 add_subdirectory(example11)
 add_subdirectory(example12)
 add_subdirectory(example13)
+add_subdirectory(example14)
+add_subdirectory(example15)
