--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -12,3 +12,4 @@ add_subdirectory(example12)
 add_subdirectory(example13)
 add_subdirectory(example14)
 add_subdirectory(example15)
+add_subdirectory(example16)
