Add default implementations for PnL, position, and sliding window tracking components
- Implemented `*Default` classes for:
  - AvgTracker, MinTracker, MaxTracker
  - DeviationTracker
  - SlidingWindowStorage (with observable support)
  - Realized and Unrealized PnL calculators and storages
  - Net and Hedged position strategies and storages
- Introduced interfaces to abstract tracker, PnL, and position components
- Extended observer interface for sliding window storage
- Updated unit tests and examples to support new implementations
- Suppressed logging in unit tests for cleaner output

--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -21,4 +21,9 @@ endmacro()
 
 cxx_executable(executor_provider ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main )
 cxx_executable(hedge_position_strategy ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main magic_enum)
+cxx_executable(hedge_position_strategy_default ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main magic_enum)
+cxx_executable(hedge_position_storage_by_pair ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main magic_enum)
 cxx_executable(net_position_strategy ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main magic_enum)
+cxx_executable(net_position_strategy_default ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main magic_enum)
+cxx_executable(net_position_storage_by_pair ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main magic_enum)
+
