--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -13,3 +13,4 @@ add_subdirectory(example13)
 add_subdirectory(example14)
 add_subdirectory(example15)
 add_subdirectory(example16)
+add_subdirectory(example17)
