--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -14,3 +14,5 @@ add_subdirectory(example14)
 add_subdirectory(example15)
 add_subdirectory(example16)
 add_subdirectory(example17)
+add_subdirectory(example18)
+add_subdirectory(example19)
