Add bybit execution event classes and connect them to position storage
- Introduced ExecutionEventInterface templated on PositionT
- Added default implementations for spot and linear buy/sell events
- Implemented Accept method to update PositionStorageByPair
- Extended ExecutionWatcherInterface with PositionT template
- Added PositionStorageByOrderIdInterface and default implementation
- Integrated event handling in example19 with ExecutionWatcherDefault
- Registered new test executable: net_position_storage_by_pair_use_external_event_bybit

--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -26,4 +26,6 @@ cxx_executable(hedge_position_storage_by_pair ${CMAKE_CURRENT_LIST_DIR} aos aot 
 cxx_executable(net_position_strategy ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main magic_enum)
 cxx_executable(net_position_strategy_default ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main magic_enum)
 cxx_executable(net_position_storage_by_pair ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main magic_enum)
+cxx_executable(net_position_storage_by_pair_use_external_event_bybit ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main magic_enum)
+
 
