start impl bybit execution parser

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -16,3 +16,4 @@ add_subdirectory(example16)
 add_subdirectory(example17)
 add_subdirectory(example18)
 add_subdirectory(example19)
+add_subdirectory(example20)
