refactor: Simplify Bybit execution event parsing and improve type safety
- Changed `order_id` type from `size_t` to `uint64_t` in `ExecutionEventInterface` for better type safety
- Simplified `BybitExecutionEventParser` by:
  - Removing template complexity and `MultiPoolHolder` dependency
  - Using direct memory pools for each event type
  - Adding comprehensive JSON parsing with error checking
  - Integrating `TradingPairFactory` for symbol resolution
- Removed commented-out template code and unused `MultiPoolHolder` implementation
- Updated example20 to demonstrate new parser functionality:
  - Added simdjson parsing example
  - Integrated with `TradingPairFactory`
  - Cleaned up test code
- Added simdjson dependency to relevant CMakeLists
- Improved error handling throughout the parsing process

Key improvements:
1. More robust JSON parsing with proper error checking
2. Simplified memory management with direct pools
3. Better type safety with uint64_t for order IDs
4. Reduced template complexity
5. Added trading pair resolution capability

--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -27,5 +27,6 @@ cxx_executable(net_position_strategy ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_mai
 cxx_executable(net_position_strategy_default ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main magic_enum)
 cxx_executable(net_position_storage_by_pair ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main magic_enum)
 cxx_executable(net_position_storage_by_pair_use_external_event_bybit ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main magic_enum)
+cxx_executable(bybit_execution_event_parser ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main magic_enum simdjson::simdjson)
 
 
