--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -17,3 +17,4 @@ add_subdirectory(example17)
 add_subdirectory(example18)
 add_subdirectory(example19)
 add_subdirectory(example20)
+add_subdirectory(example21)
