For the order manager change: "Refactor OrderManager: separate order storage and exchange logic"
For the CMakeLists change:
"Add example23 to build system"

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -17,3 +17,4 @@ add_subdirectory(example19)
 add_subdirectory(example20)
 add_subdirectory(example21)
 add_subdirectory(example22)
+add_subdirectory(example23)
