add bybit ws api

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -18,3 +18,4 @@ add_subdirectory(example20)
 add_subdirectory(example21)
 add_subdirectory(example22)
 add_subdirectory(example23)
+add_subdirectory(example24)
