feat(bybit): replace ToJson with Accept and improve order JSON generation
Changes:

    Replaced OrderTypeInterface::ToJson() with virtual Accept(RequestMakerInterface*).

    Implemented Accept() in all order types (Spot/Linear, Market/Limit).

    Added TradingPairPrinterInterface support to SpotBuyLimitOrder.

    Introduced enum-to-string converters (CategoryToString, SideToString, etc.).

    Integrated RequestMakerInterface into WebSocket order request flow.

    Updated SingleOrderAPI to use Accept() instead of hardcoded JSON.

    Added unit test for SpotBuyLimitOrder::Accept().

    Updated CMakeLists.txt to include new test target.

--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -29,5 +29,6 @@ cxx_executable(net_position_storage_by_pair ${CMAKE_CURRENT_LIST_DIR} aos aot gt
 cxx_executable(net_position_storage_by_pair_use_external_event_bybit ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main magic_enum)
 cxx_executable(bybit_execution_event_parser ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main magic_enum simdjson::simdjson nlohmann_json::nlohmann_json)
 cxx_executable(bybit_order_storage ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main magic_enum simdjson::simdjson)
+cxx_executable(bybit_spot_buy_limit_order ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main gmock_main magic_enum simdjson::simdjson nlohmann_json::nlohmann_json)
 
 
