Refactor WebSocket session handling and Bybit components
- Replaced OrderWatcher dependency from OrderStorage to OrderManager
- Modified OrderEventParser to accept TradingPairFactoryInterface
- Refactored WebSocketSession:
  - Added async read/write using Boost Asio coroutines
  - Introduced response queue for binary data
  - Implemented message write throttling with timer
  - Used moodycamel::ConcurrentQueue for thread-safe queues
- Removed template parameter from WebSocketSessionInterface
- Updated WebSocketSessionProvider accordingly
- Added `concurrentqueue` to target_link_libraries and test executables
- Minor cleanups and dummy session usage in example21

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -141,6 +141,7 @@ target_include_directories(
 target_link_libraries(${PROJECT_NAME}
     PRIVATE
     magic_enum
+    concurrentqueue
     ${Boost_LIBRARIES}
     tomlplusplus::tomlplusplus
     nlohmann_json::nlohmann_json
