--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -19,16 +19,16 @@ macro(cxx_executable name dir libs)
 cxx_executable_extended(${name} ${dir}/${name}.cc ${libs}  ${ARGN})
 endmacro()
 
-cxx_executable(executor_provider ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main )
-cxx_executable(hedge_position_strategy ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main magic_enum)
-cxx_executable(hedge_position_strategy_default ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main magic_enum)
-cxx_executable(hedge_position_storage_by_pair ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main magic_enum)
-cxx_executable(net_position_strategy ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main magic_enum)
-cxx_executable(net_position_strategy_default ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main magic_enum)
-cxx_executable(net_position_storage_by_pair ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main magic_enum)
-cxx_executable(net_position_storage_by_pair_use_external_event_bybit ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main magic_enum)
-cxx_executable(bybit_execution_event_parser ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main magic_enum simdjson::simdjson nlohmann_json::nlohmann_json)
-cxx_executable(bybit_order_storage ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main magic_enum simdjson::simdjson)
-cxx_executable(bybit_spot_buy_limit_order ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main gmock_main magic_enum simdjson::simdjson nlohmann_json::nlohmann_json)
-cxx_executable(bybit_place_order_request_maker ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main gmock_main magic_enum simdjson::simdjson nlohmann_json::nlohmann_json)
-cxx_executable(bybit_cancel_order_request_maker ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main gmock_main magic_enum simdjson::simdjson nlohmann_json::nlohmann_json)
+cxx_executable(executor_provider ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main concurrentqueue)
+cxx_executable(hedge_position_strategy ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main magic_enum concurrentqueue)
+cxx_executable(hedge_position_strategy_default ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main magic_enum concurrentqueue)
+cxx_executable(hedge_position_storage_by_pair ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main magic_enum concurrentqueue)
+cxx_executable(net_position_strategy ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main magic_enum concurrentqueue) 
+cxx_executable(net_position_strategy_default ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main magic_enum concurrentqueue) 
+cxx_executable(net_position_storage_by_pair ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main magic_enum concurrentqueue) 
+cxx_executable(net_position_storage_by_pair_use_external_event_bybit ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main magic_enum concurrentqueue) 
+cxx_executable(bybit_execution_event_parser ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main magic_enum concurrentqueue simdjson::simdjson nlohmann_json::nlohmann_json)
+cxx_executable(bybit_order_storage ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main magic_enum concurrentqueue simdjson::simdjson)
+cxx_executable(bybit_spot_buy_limit_order ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main gmock_main magic_enum concurrentqueue simdjson::simdjson nlohmann_json::nlohmann_json)
+cxx_executable(bybit_place_order_request_maker ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main gmock_main magic_enum concurrentqueue simdjson::simdjson nlohmann_json::nlohmann_json)
+cxx_executable(bybit_cancel_order_request_maker ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main gmock_main magic_enum concurrentqueue simdjson::simdjson nlohmann_json::nlohmann_json)
