--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -19,3 +19,4 @@ add_subdirectory(example21)
 add_subdirectory(example22)
 add_subdirectory(example23)
 add_subdirectory(example24)
+add_subdirectory(example25)
