Refactor WebSocketSession into readable and writable interfaces; add StaticApiKey and StaticSecretKey
- Split WebSocketSessionInterface into WebSocketSessionWritableInterface and WebSocketSessionReadableInterface
- Modified WebSocketSession to implement both interfaces
- Pass response queue and listener explicitly to WebSocketSession constructor
- Add GetResponseQueue() method to WebSocketSessionReadableInterface
- Introduce StaticApiKey and StaticSecretKey implementations for credential interfaces
- Update WebSocketSessionProvider and related examples to support interface changes
- Register new examples (example26, example27) in CMake

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -20,3 +20,5 @@ add_subdirectory(example22)
 add_subdirectory(example23)
 add_subdirectory(example24)
 add_subdirectory(example25)
+add_subdirectory(example26)
+add_subdirectory(example27)
