Add testnet support and refactor WebSocket session management
- Implemented separate testnet namespace with PrivateSessionSetup for testnet environment
- Added testnet credential loading support in session setup
- Split mainnet and testnet implementations into separate namespaces
- Removed manual ping functionality in favor of PingManager
- Fixed incorrect testnet session setup usage (changed to test_net::PrivateSessionSetup)
- Corrected order subscription builder to use testnet WebSocket session
- Added example28 to CMakeLists.txt
- Cleaned up obsolete SendSubscribePeriodically function

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -22,3 +22,4 @@ add_subdirectory(example24)
 add_subdirectory(example25)
 add_subdirectory(example26)
 add_subdirectory(example27)
+add_subdirectory(example28)
