--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -23,3 +23,4 @@ add_subdirectory(example25)
 add_subdirectory(example26)
 add_subdirectory(example27)
 add_subdirectory(example28)
+add_subdirectory(example29)
