--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -24,3 +24,4 @@ add_subdirectory(example26)
 add_subdirectory(example27)
 add_subdirectory(example28)
 add_subdirectory(example29)
+add_subdirectory(example30)
