Add libsodium dependency and link to all targets
- Added libsodium as a dependency in the main CMakeLists.txt
- Included BuildLibsodium.cmake script to build libsodium from source
- Linked libsodium to the main project and all example targets
- Updated unit tests to link with libsodium
- Uses the stable branch of libsodium from GitHub

--- a/examples/example2/CMakeLists.txt
+++ b/examples/example2/CMakeLists.txt
@@ -21,6 +21,7 @@ aos
 aot
 magic_enum::magic_enum
 tomlplusplus::tomlplusplus
+sodium
 )
 
 set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 23)
