--- a/examples/example4/CMakeLists.txt
+++ b/examples/example4/CMakeLists.txt
@@ -21,6 +21,7 @@ aos
 aot
 magic_enum::magic_enum
 tomlplusplus::tomlplusplus
+sodium
 )
 
 set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 23)
