Refactor ed25519 signing and improve libsodium integration
1. CMake changes:
- Replaced FetchContent_Populate(libsodium) with FetchContent_MakeAvailable(libsodium)
  for better dependency management
- Added explicit include_directories for libsodium headers

2. Signer interface improvements:
- Changed return type from std::string to std::pair<bool, std::string> in SignerInterface
  to provide error handling capability
- Added status flag to all signing operations
- Improved error handling for invalid key sizes

3. Implementation changes:
- Moved Base64Encode method to public section for reuse
- Simplified crypto_sign_detached calls
- Added proper status propagation in SignByLowerCase
- Cleaned up code formatting and line endings

4. Security:
- Added additional checks for secret key size validation
- Maintained constant-time operations through libsodium

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,9 +35,11 @@ FetchContent_Declare(
   GIT_TAG        stable 
 )
 
-FetchContent_Populate(libsodium)
+FetchContent_MakeAvailable(libsodium)
 build_libsodium(${libsodium_SOURCE_DIR})
+include_directories(${libsodium_SOURCE_DIR}/src/libsodium/include)
 link_directories(${LIBSODIUM_LIBRARY_DIR})
+
 
 set(BUILD_TESTS OFF CACHE BOOL "Disable building tests in cryptobot" FORCE)
 set(BUILD_EXAMPLES OFF CACHE BOOL "Disable building examples in cryptobot" FORCE)
