feat: Implement Ed25519 authentication and refactor credential loading
- Replaced HMAC-SHA256 with Ed25519 for Binance WebSocket authentication
- Updated Authenticator to use Ed25519 signing with new message format
- Refactored CredentialsLoader to support both HMAC-SHA256 and Ed25519 keys
- Added new Signer implementations for Ed25519 with base64 URL-safe encoding
- Extended credentials interface to handle different key types separately
- Added new test and example targets for Ed25519 functionality
- Improved secret key handling with proper base64 URL-safe no-padding support

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -25,3 +25,4 @@ add_subdirectory(example28)
 add_subdirectory(example29)
 add_subdirectory(example30)
 add_subdirectory(example31)
+add_subdirectory(example32)
