--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -35,4 +35,5 @@ cxx_executable(bybit_cancel_order_request_maker ${CMAKE_CURRENT_LIST_DIR} aos ao
 cxx_executable(order_book ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main gmock_main magic_enum concurrentqueue simdjson::simdjson nlohmann_json::nlohmann_json tomlplusplus::tomlplusplus sodium)
 cxx_executable(bybit_order_book_event_parser ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main gmock_main magic_enum concurrentqueue simdjson::simdjson nlohmann_json::nlohmann_json tomlplusplus::tomlplusplus sodium)
 cxx_executable(converter_trading_pair_to_big_string_view ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main gmock_main magic_enum concurrentqueue simdjson::simdjson nlohmann_json::nlohmann_json tomlplusplus::tomlplusplus sodium)
+cxx_executable(ed25519_signer ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main gmock_main magic_enum concurrentqueue simdjson::simdjson nlohmann_json::nlohmann_json tomlplusplus::tomlplusplus sodium)
 
