--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -26,3 +26,4 @@ add_subdirectory(example29)
 add_subdirectory(example30)
 add_subdirectory(example31)
 add_subdirectory(example32)
+add_subdirectory(example33)
