--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -27,3 +27,4 @@ add_subdirectory(example30)
 add_subdirectory(example31)
 add_subdirectory(example32)
 add_subdirectory(example33)
+add_subdirectory(example34)
