--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -36,4 +36,5 @@ cxx_executable(order_book ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main gmock_mai
 cxx_executable(bybit_order_book_event_parser ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main gmock_main magic_enum concurrentqueue simdjson::simdjson nlohmann_json::nlohmann_json tomlplusplus::tomlplusplus sodium)
 cxx_executable(converter_trading_pair_to_big_string_view ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main gmock_main magic_enum concurrentqueue simdjson::simdjson nlohmann_json::nlohmann_json tomlplusplus::tomlplusplus sodium)
 cxx_executable(ed25519_signer ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main gmock_main magic_enum concurrentqueue simdjson::simdjson nlohmann_json::nlohmann_json tomlplusplus::tomlplusplus sodium)
-
+cxx_executable(binance_order_event_parser ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main gmock_main magic_enum concurrentqueue simdjson::simdjson nlohmann_json::nlohmann_json tomlplusplus::tomlplusplus sodium)
+cxx_executable(binance_execution_event_parser ${CMAKE_CURRENT_LIST_DIR} aos aot gtest_main gmock_main magic_enum concurrentqueue simdjson::simdjson nlohmann_json::nlohmann_json tomlplusplus::tomlplusplus sodium)
