--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -28,3 +28,4 @@ add_subdirectory(example31)
 add_subdirectory(example32)
 add_subdirectory(example33)
 add_subdirectory(example34)
+add_subdirectory(example35)
