Refactor order book subscribers and clean up exchange-related code
- Enhanced BestBidNotifier and BestAskNotifier to implement new callback interfaces
- Added callback setters for best bid/ask updates in subscriber interfaces
- Removed unused exchange-related files (i_exchange.h, binance_exchange.h, exchange_registry.h)
- Reorganized include order in aos.h for better readability
- Commented out unused OrderMinQtyCalculator implementation
- Added new example36 to CMakeLists with basic strategy example:
  * Demonstrates callback-based strategy reacting to best bid/ask changes
  * Uses Binance spot infrastructure with BTCUSDT pair
  * Shows strategy initialization pattern
- Fixed missing #pragma once in i_calculator.h

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -29,3 +29,4 @@ add_subdirectory(example32)
 add_subdirectory(example33)
 add_subdirectory(example34)
 add_subdirectory(example35)
+add_subdirectory(example36)
