Add Binance Futures support for order book infrastructure
Key changes:
- Implemented Futures-specific infrastructure classes (InfrastructureInterface, InfrastructureNotifierInterface)
- Added Futures enums (DiffUpdateSpeed_ms, Depth) and host configurations
- Extended order book sync and subscription builders for Futures
- Added new example37 to demonstrate Futures functionality
- Fixed minor logging and parsing issues in existing code

The changes enable support for Binance USDⓈ-M Futures order book streaming with:
- Diff book depth streams at 100ms, 250ms, or 500ms intervals
- Snapshot requests with depth up to 1000 levels
- Callback mechanisms for best bid/ask updates
- Proper WebSocket host configuration (fstream.binance.com)

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -30,3 +30,4 @@ add_subdirectory(example33)
 add_subdirectory(example34)
 add_subdirectory(example35)
 add_subdirectory(example36)
+add_subdirectory(example37)
