Refactor: Rename SlidingWindowStorageInterface to SlidingWindowStorageAvgDevMinMaxInterface
- Renamed interface and its usages to clarify its role in handling avg, deviation, min, and max.
- Updated mutual information calculators and strategy engine to use the new interface.
- Introduced CoreStrategyInterface to separate strategy logic from trade analysis responsibilities.
- Removed deprecated example16 and example17, and added example38 to the build.
- Minor cleanup and consistent naming across modules.

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -9,8 +9,8 @@ add_subdirectory(example12)
 add_subdirectory(example13)
 add_subdirectory(example14)
 add_subdirectory(example15_empty)
-add_subdirectory(example16)
-add_subdirectory(example17)
+add_subdirectory(example16_empty)
+add_subdirectory(example17_empty)
 add_subdirectory(example18)
 add_subdirectory(example19)
 add_subdirectory(example20)
@@ -31,3 +31,4 @@ add_subdirectory(example34)
 add_subdirectory(example35)
 add_subdirectory(example36)
 add_subdirectory(example37)
+add_subdirectory(example38)
