--- a/examples/example16_empty/CMakeLists.txt
+++ b/examples/example16_empty/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-set (PROJECT_NAME example17)
+set (PROJECT_NAME example16_empty)
 project(${PROJECT_NAME})
 
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pg")
