Refactor enum types and add hash support
- Added explicit underlying types (uint8_t/uint16_t/uint32_t) to all enums:
  - Category (binance/bybit)
  - ExchangeId
  - NetworkEnvironment
  - TradingPair

- Introduced Raw type aliases using std::underlying_type_t:
  - CategoryRaw
  - ExchangeIdRaw
  - NetworkEnvironmentRaw
  - TradingPairRaw

- Implemented std::hash specialization for all enums
- Added fmt::formatter for NetworkEnvironment
- Updated TradingPair formatter output format
- Added new example39 to CMakeLists
- Minor includes cleanup (added cstdint where needed)

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -32,3 +32,4 @@ add_subdirectory(example35)
 add_subdirectory(example36)
 add_subdirectory(example37)
 add_subdirectory(example38)
+add_subdirectory(example39)
