Update project structure and dependencies
- Removed Boost.Hana dependency from sliding_window_storage.h
- Replaced example3 and example5 with empty variants
- Added fmtlog-static to multiple example CMakeLists.txt
- Simplified example17_empty/main.cpp to minimal stub
- Cleaned up example9/main.cpp by removing commented code
- Updated README.md with repo stats badge

--- a/examples/example11/CMakeLists.txt
+++ b/examples/example11/CMakeLists.txt
@@ -24,6 +24,7 @@ sodium
 concurrentqueue
 nlohmann_json::nlohmann_json
 fmt
+fmtlog-static
 )
 
 set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 23)
