--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,7 +1,7 @@
-add_subdirectory(example3)
+add_subdirectory(example3_empty)
 add_subdirectory(example2)
 add_subdirectory(example4)
-add_subdirectory(example5)
+add_subdirectory(example5_empty)
 add_subdirectory(example6)
 add_subdirectory(example9)
 add_subdirectory(example11)
