--- a/examples/example6/CMakeLists.txt
+++ b/examples/example6/CMakeLists.txt
@@ -22,6 +22,7 @@ magic_enum::magic_enum
 tomlplusplus::tomlplusplus
 sodium
 fmt
+fmtlog-static
 )
 
 set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 23)
