Refactor logging and dependency ordering
- Added fmtlog.h includes to multiple core header files:
  - mem_pool.h
  - number_pool.h
  - uid_manager.h
  - unique_id_generator.h

- Reordered fmt/fmtlog-static dependencies in CMakeLists.txt for:
  - Multiple example projects (14, 18, 21, 25-30, 9)
  - All unit test executables
  - Now consistently lists fmtlog-static before fmt

- Simplified example9/main.cpp:
  - Removed commented code
  - Updated logging implementation
  - Added string_view and fmt/core includes

- Maintained all existing functionality while improving logging consistency

--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -19,22 +19,22 @@ macro(cxx_executable name dir libs)
 cxx_executable_extended(${name} ${dir}/${name}.cc ${libs}  ${ARGN})
 endmacro()
 
-cxx_executable(executor_provider ${CMAKE_CURRENT_LIST_DIR} aos fmt fmtlog-static gtest_main concurrentqueue tomlplusplus::tomlplusplus sodium)
-cxx_executable(hedge_position_strategy ${CMAKE_CURRENT_LIST_DIR} aos fmt fmtlog-static gtest_main magic_enum concurrentqueue tomlplusplus::tomlplusplus sodium)
-cxx_executable(hedge_position_strategy_default ${CMAKE_CURRENT_LIST_DIR} aos fmt fmtlog-static gtest_main magic_enum concurrentqueue tomlplusplus::tomlplusplus sodium)
-cxx_executable(hedge_position_storage_by_pair ${CMAKE_CURRENT_LIST_DIR} aos fmt fmtlog-static gtest_main magic_enum concurrentqueue tomlplusplus::tomlplusplus sodium)
-cxx_executable(net_position_strategy ${CMAKE_CURRENT_LIST_DIR} aos fmt fmtlog-static gtest_main magic_enum concurrentqueue tomlplusplus::tomlplusplus sodium) 
-cxx_executable(net_position_strategy_default ${CMAKE_CURRENT_LIST_DIR} aos fmt fmtlog-static gtest_main magic_enum concurrentqueue tomlplusplus::tomlplusplus sodium) 
-cxx_executable(net_position_storage_by_pair ${CMAKE_CURRENT_LIST_DIR} aos fmt fmtlog-static gtest_main magic_enum concurrentqueue tomlplusplus::tomlplusplus sodium) 
-cxx_executable(net_position_storage_by_pair_use_external_event_bybit ${CMAKE_CURRENT_LIST_DIR} aos fmt fmtlog-static gtest_main magic_enum concurrentqueue tomlplusplus::tomlplusplus sodium) 
-cxx_executable(bybit_execution_event_parser ${CMAKE_CURRENT_LIST_DIR} aos fmt fmtlog-static gtest_main magic_enum concurrentqueue simdjson::simdjson nlohmann_json::nlohmann_json tomlplusplus::tomlplusplus sodium)
-cxx_executable(bybit_order_storage ${CMAKE_CURRENT_LIST_DIR} aos fmt fmtlog-static gtest_main magic_enum concurrentqueue simdjson::simdjson tomlplusplus::tomlplusplus sodium)
-cxx_executable(bybit_spot_buy_limit_order ${CMAKE_CURRENT_LIST_DIR} aos fmt fmtlog-static gtest_main gmock_main magic_enum concurrentqueue simdjson::simdjson nlohmann_json::nlohmann_json tomlplusplus::tomlplusplus sodium)
-cxx_executable(bybit_place_order_request_maker ${CMAKE_CURRENT_LIST_DIR} aos fmt fmtlog-static gtest_main gmock_main magic_enum concurrentqueue simdjson::simdjson nlohmann_json::nlohmann_json tomlplusplus::tomlplusplus sodium)
-cxx_executable(bybit_cancel_order_request_maker ${CMAKE_CURRENT_LIST_DIR} aos fmt fmtlog-static gtest_main gmock_main magic_enum concurrentqueue simdjson::simdjson nlohmann_json::nlohmann_json tomlplusplus::tomlplusplus sodium)
-cxx_executable(order_book ${CMAKE_CURRENT_LIST_DIR} aos fmt fmtlog-static gtest_main gmock_main magic_enum concurrentqueue simdjson::simdjson nlohmann_json::nlohmann_json tomlplusplus::tomlplusplus sodium)
-cxx_executable(bybit_order_book_event_parser ${CMAKE_CURRENT_LIST_DIR} aos fmt fmtlog-static gtest_main gmock_main magic_enum concurrentqueue simdjson::simdjson nlohmann_json::nlohmann_json tomlplusplus::tomlplusplus sodium)
-cxx_executable(converter_trading_pair_to_big_string_view ${CMAKE_CURRENT_LIST_DIR} aos fmt fmtlog-static gtest_main gmock_main magic_enum concurrentqueue simdjson::simdjson nlohmann_json::nlohmann_json tomlplusplus::tomlplusplus sodium)
-cxx_executable(ed25519_signer ${CMAKE_CURRENT_LIST_DIR} aos fmt fmtlog-static gtest_main gmock_main magic_enum concurrentqueue simdjson::simdjson nlohmann_json::nlohmann_json tomlplusplus::tomlplusplus sodium)
-cxx_executable(binance_order_event_parser ${CMAKE_CURRENT_LIST_DIR} aos fmt fmtlog-static gtest_main gmock_main magic_enum concurrentqueue simdjson::simdjson nlohmann_json::nlohmann_json tomlplusplus::tomlplusplus sodium)
-cxx_executable(binance_execution_event_parser ${CMAKE_CURRENT_LIST_DIR} aos fmt fmtlog-static gtest_main gmock_main magic_enum concurrentqueue simdjson::simdjson nlohmann_json::nlohmann_json tomlplusplus::tomlplusplus sodium)
+cxx_executable(executor_provider ${CMAKE_CURRENT_LIST_DIR} aos fmtlog-static fmt gtest_main concurrentqueue tomlplusplus::tomlplusplus sodium)
+cxx_executable(hedge_position_strategy ${CMAKE_CURRENT_LIST_DIR} aos fmtlog-static fmt gtest_main magic_enum concurrentqueue tomlplusplus::tomlplusplus sodium)
+cxx_executable(hedge_position_strategy_default ${CMAKE_CURRENT_LIST_DIR} aos fmtlog-static fmt gtest_main magic_enum concurrentqueue tomlplusplus::tomlplusplus sodium)
+cxx_executable(hedge_position_storage_by_pair ${CMAKE_CURRENT_LIST_DIR} aos fmtlog-static fmt gtest_main magic_enum concurrentqueue tomlplusplus::tomlplusplus sodium)
+cxx_executable(net_position_strategy ${CMAKE_CURRENT_LIST_DIR} aos fmtlog-static fmt gtest_main magic_enum concurrentqueue tomlplusplus::tomlplusplus sodium) 
+cxx_executable(net_position_strategy_default ${CMAKE_CURRENT_LIST_DIR} aos fmtlog-static fmt gtest_main magic_enum concurrentqueue tomlplusplus::tomlplusplus sodium) 
+cxx_executable(net_position_storage_by_pair ${CMAKE_CURRENT_LIST_DIR} aos fmtlog-static fmt gtest_main magic_enum concurrentqueue tomlplusplus::tomlplusplus sodium) 
+cxx_executable(net_position_storage_by_pair_use_external_event_bybit ${CMAKE_CURRENT_LIST_DIR} aos fmtlog-static fmt gtest_main magic_enum concurrentqueue tomlplusplus::tomlplusplus sodium) 
+cxx_executable(bybit_execution_event_parser ${CMAKE_CURRENT_LIST_DIR} aos fmtlog-static fmt gtest_main magic_enum concurrentqueue simdjson::simdjson nlohmann_json::nlohmann_json tomlplusplus::tomlplusplus sodium)
+cxx_executable(bybit_order_storage ${CMAKE_CURRENT_LIST_DIR} aos fmtlog-static fmt gtest_main magic_enum concurrentqueue simdjson::simdjson tomlplusplus::tomlplusplus sodium)
+cxx_executable(bybit_spot_buy_limit_order ${CMAKE_CURRENT_LIST_DIR} aos fmtlog-static fmt gtest_main gmock_main magic_enum concurrentqueue simdjson::simdjson nlohmann_json::nlohmann_json tomlplusplus::tomlplusplus sodium)
+cxx_executable(bybit_place_order_request_maker ${CMAKE_CURRENT_LIST_DIR} aos fmtlog-static fmt gtest_main gmock_main magic_enum concurrentqueue simdjson::simdjson nlohmann_json::nlohmann_json tomlplusplus::tomlplusplus sodium)
+cxx_executable(bybit_cancel_order_request_maker ${CMAKE_CURRENT_LIST_DIR} aos fmtlog-static fmt gtest_main gmock_main magic_enum concurrentqueue simdjson::simdjson nlohmann_json::nlohmann_json tomlplusplus::tomlplusplus sodium)
+cxx_executable(order_book ${CMAKE_CURRENT_LIST_DIR} aos fmtlog-static fmt gtest_main gmock_main magic_enum concurrentqueue simdjson::simdjson nlohmann_json::nlohmann_json tomlplusplus::tomlplusplus sodium)
+cxx_executable(bybit_order_book_event_parser ${CMAKE_CURRENT_LIST_DIR} aos fmtlog-static fmt gtest_main gmock_main magic_enum concurrentqueue simdjson::simdjson nlohmann_json::nlohmann_json tomlplusplus::tomlplusplus sodium)
+cxx_executable(converter_trading_pair_to_big_string_view ${CMAKE_CURRENT_LIST_DIR} aos fmtlog-static fmt gtest_main gmock_main magic_enum concurrentqueue simdjson::simdjson nlohmann_json::nlohmann_json tomlplusplus::tomlplusplus sodium)
+cxx_executable(ed25519_signer ${CMAKE_CURRENT_LIST_DIR} aos fmtlog-static fmt gtest_main gmock_main magic_enum concurrentqueue simdjson::simdjson nlohmann_json::nlohmann_json tomlplusplus::tomlplusplus sodium)
+cxx_executable(binance_order_event_parser ${CMAKE_CURRENT_LIST_DIR} aos fmtlog-static fmt gtest_main gmock_main magic_enum concurrentqueue simdjson::simdjson nlohmann_json::nlohmann_json tomlplusplus::tomlplusplus sodium)
+cxx_executable(binance_execution_event_parser ${CMAKE_CURRENT_LIST_DIR} aos fmtlog-static fmt gtest_main gmock_main magic_enum concurrentqueue simdjson::simdjson nlohmann_json::nlohmann_json tomlplusplus::tomlplusplus sodium)
