--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -33,3 +33,4 @@ add_subdirectory(example36)
 add_subdirectory(example37)
 add_subdirectory(example38)
 add_subdirectory(example39)
+add_subdirectory(example40)
