- Introduced infrastructure interfaces and implementations for Bybit Spot and Linear markets. - Added support for order book syncing, notifier integration, and callback registration for best bid/ask changes. - Integrated subscription builders and WebSocket sessions for order book updates. - Updated dependencies and example directories accordingly.

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -34,3 +34,5 @@ add_subdirectory(example37)
 add_subdirectory(example38)
 add_subdirectory(example39)
 add_subdirectory(example40)
+add_subdirectory(example41)
+add_subdirectory(example42)
