--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -36,3 +36,4 @@ add_subdirectory(example39)
 add_subdirectory(example40)
 add_subdirectory(example41)
 add_subdirectory(example42)
+add_subdirectory(example43)
